# User-Management-App-of-Apps

./: README.md  graph.py
app-of-apps/: README.md  pyproject.toml
app-of-apps/app/: settings.py  urls.py
app-of-apps/application/: admin.py  apps.py  models.py  views.py
app-of-apps/application/management/commands/: populate_user_db.py
app-of-apps/application/migrations/: 0001_initial.py  0002_alter_applications_deleted_ts_and_more.py  0002_rename_permission_apppermission.py  0003_rename_applications_application.py  0004_application_user.py
app-of-apps/application/tests/: test_models.py
